<resources>
    <string name="app_name">WeatherMe</string>
    <string name="title_list">Locations</string>
    <string name="title_current">Current</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_weather">Weather</string>
    <string name="title_search">Search</string>
    <string name="title_result">Result</string>
    <string name="title_48_hours">48 hours</string>
    <string name="title_7_days">7 days</string>
    
    <!-- List Fragment -->
    <string name="no_data_list">No elements to show</string>

    <!-- Current Fragment -->
    <string name="no_data_current">No weather to show</string>
    <string name="already_saved">Location already saved</string>
    <string name="connectivity_error">Error fetching the data</string>

    <!-- Search Fragment -->
    <string name="search_textfield_hint">City name</string>
    <string name="search_min_characthers">Type at least 3 characters</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_not_found">Unable to get the location</string>
    <string name="location_error">Error getting the location</string>
    <string name="no_internet_connection">Unable to connect to internet</string>
    <string name="unknown_error">Unknown error</string>

    <!-- Current Search ViewModel -->
    <string name="error_saving">Error trying to save it</string>

    <!-- List Item -->
    <string name="degrees_character">%s°</string>
    <string name="degrees_max_min_temp">%s°/%s°</string>
    <string name="uv_index">UV index</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- Current Layout -->
    <string name="current_layout_title">%s, %s</string>
    <string name="current_percent">%d %%</string>
    <string name="current_speed">%d m/s</string>
    <string name="current_mms">%.1f mm</string>
    <string name="current_feels_like">Feels like</string>
    <string name="current_cloud_cover">Cloud cover</string>
    <string name="current_humidity">Humidity</string>
    <string name="current_pressure">Pressure</string>
    <string name="current_wind_speed">Wind speed</string>
    <string name="current_wind_direction">Wind direction</string>
    <string name="current_rain">Rain</string>
    <string name="current_snow">Snow</string>
    <string name="current_sunrise">Sunrise</string>
    <string name="current_sunset">Sunset</string>

    <!-- Hourly item -->
    <string name="hourly_pop">Chance of rain</string>
    <string name="hourly_wind">Wind</string>
    
    <!-- Wind directions -->
    <string name="north">N</string>
    <string name="north_north_east">NNE</string>
    <string name="north_east">NE</string>
    <string name="east_north_east">ENE</string>
    <string name="east">E</string>
    <string name="east_south_east">ESE</string>
    <string name="south_east">SE</string>
    <string name="south_south_east">SSE</string>
    <string name="south">S</string>
    <string name="south_south_west">SSW</string>
    <string name="south_west">SW</string>
    <string name="west_south_west">WSW</string>
    <string name="west">W</string>
    <string name="west_north_west">WNW</string>
    <string name="north_west">NW</string>
    <string name="north_north_west">NNW</string>
    
    <!-- UV index -->
    <string name="uvi_zero">- -</string>
    <string name="uvi_low">Low</string>
    <string name="uvi_medium">Medium</string>
    <string name="uvi_high">High</string>
    <string name="uvi_very_high">Very high</string>
    <string name="uvi_extreme">Extreme</string>
    
    <!-- Preferences -->
    <string name="title_settings">Settings</string>
    <string name="pref_automatic_update_key">prefAutomaticUpdateKey</string>
    <string name="pref_automatic_update_title">Automatic update</string>
    <string name="pref_automatic_update_summary_on">Update the weather automatically every hour</string>
    <string name="pref_automatic_update_summary_off">Update the weather when the app is launched and not before 1 hour</string>
    <string name="pref_automatic_update_category_key">prefAutomaticUpdateSummaryKey</string>
    <string name="pref_automatic_update_category_title">Updates</string>
    <string name="pref_units_key">prefUnitsKey</string>
    <string name="pref_units_title">Temperature and wind speed</string>
    <string name="pref_units_standard">standard</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_units_standard_summary">Standard (K, m/s)</string>
    <string name="pref_units_metric_summary">Metric (C°, m/s)</string>
    <string name="pref_units_imperial_summary">Imperial (F°, mph)</string>
    <string name="pref_units_category_key">unitsCategoryKey</string>
    <string name="pref_units_category_title">Units</string>
</resources>