<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.android.weatherme.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_navigation_current"
            app:destination="@id/navigation_current" />
    </fragment>

    <fragment
        android:id="@+id/navigation_current"
        android:name="com.example.android.weatherme.ui.current.CurrentFragment"
        android:label="@string/title_current"
        tools:layout="@layout/fragment_current" >
        <argument
            android:name="selectedCurrent"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.android.weatherme.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
</navigation>