<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="current"
            type="com.example.android.weatherme.data.database.entities.CurrentEntity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/medium_margin"
        android:paddingBottom="@dimen/medium_margin"
        android:paddingStart="@dimen/medium_margin"
        android:paddingEnd="@dimen/medium_margin">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <ImageView
            android:id="@+id/detail_thermomether_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_thermometer"
            app:tint="@color/current_detail_icon_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/feels_like_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_feels_like"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_thermomether_ic"
            app:layout_constraintStart_toEndOf="@id/detail_thermomether_ic" />

        <TextView
            android:id="@+id/detail_temperature"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@{@string/degrees_character(current.feelsLike)}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintTop_toBottomOf="@id/feels_like_textview"
            app:layout_constraintStart_toEndOf="@id/detail_thermomether_ic"
            tools:text="17°" />

        <ImageView
            android:id="@+id/detail_cloud_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_cloud"
            app:tint="@color/current_detail_icon_color"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@id/detail_thermomether_ic"
            android:layout_marginStart="@dimen/large_margin"/>

        <TextView
            android:id="@+id/cloud_cover_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_cloud_cover"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_cloud_ic"
            app:layout_constraintStart_toEndOf="@id/detail_cloud_ic" />

        <TextView
            android:id="@+id/detail_cloud"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@{@string/current_percent(current.clouds)}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintStart_toEndOf="@id/detail_cloud_ic"
            app:layout_constraintTop_toBottomOf="@id/cloud_cover_textview"
            tools:text="80%" />

        <ImageView
            android:id="@+id/detail_humidity_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_humidity"
            app:tint="@color/current_detail_icon_color"
            android:layout_marginTop="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_thermomether_ic" />

        <TextView
            android:id="@+id/humidity_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_humidity"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_humidity_ic"
            app:layout_constraintStart_toEndOf="@id/detail_humidity_ic" />

        <TextView
            android:id="@+id/detail_humidity"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@{@string/current_percent(current.humidity)}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintStart_toEndOf="@id/detail_humidity_ic"
            app:layout_constraintTop_toBottomOf="@id/humidity_textview"
            tools:text="50%"/>

        <ImageView
            android:id="@+id/detail_pressure_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_barometer"
            app:tint="@color/current_detail_icon_color"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/detail_humidity_ic"
            app:layout_constraintBottom_toBottomOf="@id/detail_humidity_ic"
            android:layout_marginStart="@dimen/large_margin"/>

        <TextView
            android:id="@+id/pressure_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_pressure"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_pressure_ic"
            app:layout_constraintStart_toEndOf="@id/detail_pressure_ic" />

        <TextView
            android:id="@+id/detail_pressure"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@{String.valueOf(current.pressure)}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintStart_toEndOf="@id/detail_pressure_ic"
            app:layout_constraintTop_toBottomOf="@id/pressure_textview"
            tools:text="1020"/>

        <ImageView
            android:id="@+id/detail_wind_speed_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_wind_speed"
            app:tint="@color/current_detail_icon_color"
            android:layout_marginTop="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_humidity_ic"/>

        <TextView
            android:id="@+id/wind_speed_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_wind_speed"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_wind_speed_ic"
            app:layout_constraintStart_toEndOf="@id/detail_wind_speed_ic" />

        <TextView
            android:id="@+id/detail_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@{@string/current_speed(current.windSpeed)}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintStart_toEndOf="@id/detail_wind_speed_ic"
            app:layout_constraintTop_toBottomOf="@id/wind_speed_textview"
            tools:text="3" />

        <ImageView
            android:id="@+id/detail_wind_direction_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_wind_direction"
            app:tint="@color/current_detail_icon_color"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/detail_wind_speed_ic"
            app:layout_constraintBottom_toBottomOf="@id/detail_wind_speed_ic"
            android:layout_marginStart="@dimen/large_margin"
            android:windDirection="@{current.windDegrees}"/>

        <TextView
            android:id="@+id/wind_direction_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_wind_direction"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_wind_direction_ic"
            app:layout_constraintStart_toEndOf="@id/detail_wind_direction_ic"/>

        <TextView
            android:id="@+id/detail_wind_direction"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:windDirectionString="@{current.windDegrees}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintStart_toEndOf="@id/detail_wind_direction_ic"
            app:layout_constraintTop_toBottomOf="@id/wind_direction_textview"
            tools:text="90"/>

        <ImageView
            android:id="@+id/detail_raindrops_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_raindrops"
            app:tint="@color/current_detail_icon_color"
            android:layout_marginTop="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_wind_speed_ic"/>

        <TextView
            android:id="@+id/rain_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_rain"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_raindrops_ic"
            app:layout_constraintStart_toEndOf="@id/detail_raindrops_ic"/>

        <TextView
            android:id="@+id/detail_raindrops"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@{@string/current_mms(current.rainOneHour)}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintStart_toEndOf="@id/detail_raindrops_ic"
            app:layout_constraintTop_toBottomOf="@id/rain_textview"
            tools:text="1 mm" />

        <ImageView
            android:id="@+id/detail_snowflake_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_snowflake"
            app:tint="@color/current_detail_icon_color"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/detail_raindrops_ic"
            app:layout_constraintBottom_toBottomOf="@id/detail_raindrops_ic"
            android:layout_marginStart="@dimen/large_margin"/>

        <TextView
            android:id="@+id/snow_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_snow"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_snowflake_ic"
            app:layout_constraintStart_toEndOf="@id/detail_snowflake_ic"/>

        <TextView
            android:id="@+id/detail_snowflake"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@{@string/current_mms(current.snowOneHour)}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintStart_toEndOf="@id/detail_snowflake_ic"
            app:layout_constraintTop_toBottomOf="@id/snow_textview"
            tools:text="2 mm"/>

        <ImageView
            android:id="@+id/detail_sunrise_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_sunrise"
            app:tint="@color/current_detail_icon_color"
            android:layout_marginTop="@dimen/large_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_raindrops_ic"/>

        <TextView
            android:id="@+id/sunrise_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_sunrise"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_sunrise_ic"
            app:layout_constraintStart_toEndOf="@id/detail_sunrise_ic"/>

        <TextView
            android:id="@+id/detail_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:toTime="@{current.sunrise}"
            android:offset="@{current.timeZone}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintStart_toEndOf="@id/detail_sunrise_ic"
            app:layout_constraintTop_toBottomOf="@id/sunrise_textview"
            tools:text="07:46" />

        <ImageView
            android:id="@+id/detail_sunset_ic"
            android:layout_width="@dimen/detail_icon_size"
            android:layout_height="@dimen/detail_icon_size"
            android:src="@drawable/ic_sunset"
            app:tint="@color/current_detail_icon_color"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/detail_sunrise_ic"
            app:layout_constraintBottom_toBottomOf="@id/detail_sunrise_ic"
            android:layout_marginStart="@dimen/large_margin"/>

        <TextView
            android:id="@+id/sunset_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/current_sunset"
            style="@style/CurrentDetailTitle"
            app:layout_constraintTop_toTopOf="@id/detail_sunset_ic"
            app:layout_constraintStart_toEndOf="@id/detail_sunset_ic"/>

        <TextView
            android:id="@+id/detail_sunset"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:toTime="@{current.sunset}"
            android:offset="@{current.timeZone}"
            style="@style/CurrentDetailSubtitle"
            app:layout_constraintStart_toEndOf="@id/detail_sunset_ic"
            app:layout_constraintTop_toBottomOf="@id/sunset_textview"
            tools:text="18:46"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>